# cluster-short-course

./: readme.md
compilation/: readme.md
compilation/libraryone/: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
compilation/libraryone/examples/libraryone/: libraryone.cc
compilation/libraryone/include/libraryone/base/: config.h.in  config.h.in~
compilation/libraryone/include/libraryone/hello/: hello.h
compilation/libraryone/include/libraryone/helloint/: hello.h
compilation/libraryone/source/hello/: hello.cc
compilation/libraryone/source/helloint/: hello.cc
compilation/librarytwo/: CMakeLists.txt
compilation/librarytwo/source/: two.cc
git/: readme.md
shell-scripting/: download-shakespeare.sh  love-sonnets.sh  readme.md
shell-scripting/solutions/: hello-world.sh  loop-capitalize.sh  loop-unique.sh  loop.sh  love-sonnets.sh  no-love-sonnets-2.sh  no-love-sonnets.sh  rot13  split-sonnets.sh  zero-sonnets.sh
slurm/: readme.md
